# Area-Analyzer

./: Area_Calculator.py  CMakeLists.txt  README.md  pyproject.toml
include/: Analyzer.hpp  GraphicTablet.hpp  GraphicTalet.hpp  PickMenu.hpp  Recorder.hpp  TabletFinder.hpp
src/: Analyzer.cpp  GraphicTablet.cpp  Recorder.cpp  TabletFinder.cpp  main.cpp
